# py_tic_tac_toe

./: .gitignore  CODE_REVIEW.md  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
doc/: player_ai.mmd  player_human.mmd  player_network_local.mmd  player_network_remote.mmd
py_tic_tac_toe/: __main__.py  board.py  exception.py  factories.py  game.py  game_engine.py  player.py  player_ai.py  player_local.py  player_network.py  tcp_transport.py  ui.py  ui_pygame.py  ui_terminal.py  ui_tk.py
py_tic_tac_toe/engine/: game_engine.py
py_tic_tac_toe/event_bus/: event_bus.py
py_tic_tac_toe/game/: board_utils.py  game.py
py_tic_tac_toe/game_engine/: event.py  game_engine.py
py_tic_tac_toe/network/: tcp_transport.py
py_tic_tac_toe/player/: ai_player.py  local_player.py  network_players.py  player.py
py_tic_tac_toe/ui/: pygame.py  terminal.py  tk.py  ui.py
tests/: tests.py
